ASCIIモードに移動するキーとその設定を追加
かなキーのトグル動作だと、
現在のモードを意識しないといけなくて面倒なので。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
 	<string translatable="false" name="prefkey_kana_key">PrefKeyKanaKey</string>
 	<string translatable="false" name="prefkey_mod_kana_key">PrefKeyModKanaKey</string>
 	<string translatable="false" name="prefkey_toggle_kana_key">PrefKeyToggleKanaKey</string>
+	<string translatable="false" name="prefkey_eisu_key">PrefKeyEisuKey</string>
 	<string translatable="false" name="prefkey_cancel_key">PrefKeyCancelKey</string>
 	<string translatable="false" name="prefkey_mod_cancel_key">PrefKeyModCancelKey</string>
 	<string translatable="false" name="prefkey_candidates_size">PrefKeyCandidatesSize</string>
